// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogInScreen />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          hidden={true}
          showHideTransition="fade"
        />,
        <Component
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
              }
            }
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "opacity": 0.7,
                "width": "100%",
              }
            }
          />
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "column",
              "height": "99%",
            }
          }
        >
          <Component
            style={
              Object {
                "flex": 3,
              }
            }
          />
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Image
              source={1}
              style={Object {}}
            />
          </Component>
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Roboto",
                  "fontSize": 25,
                  "marginHorizontal": "10%",
                  "textAlign": "center",
                }
              }
            >
              Agenda Cultural da Universidade do Porto
            </Text>
          </Component>
          <Component
            style={
              Object {
                "flex": 1,
                "width": "60%",
              }
            }
          >
            <Button
              onPress={[Function]}
              title="Entrar com a conta Google"
            />
          </Component>
          <Component
            style={
              Object {
                "flex": 2,
              }
            }
          />
        </Component>,
      ],
      "style": Object {
        "backgroundColor": "#2c8f7f",
        "height": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "hidden": true,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            source={
              Object {
                "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
              }
            }
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "opacity": 0.7,
                "width": "100%",
              }
            }
          />,
          "style": Object {
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
            },
            "style": Object {
              "flex": 1,
              "height": "100%",
              "opacity": 0.7,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "flex": 3,
                }
              }
            />,
            <Component
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={1}
                style={Object {}}
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                    "marginHorizontal": "10%",
                    "textAlign": "center",
                  }
                }
              >
                Agenda Cultural da Universidade do Porto
              </Text>
            </Component>,
            <Component
              style={
                Object {
                  "flex": 1,
                  "width": "60%",
                }
              }
            >
              <Button
                onPress={[Function]}
                title="Entrar com a conta Google"
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 2,
                }
              }
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "column",
            "height": "99%",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "flex": 3,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                source={1}
                style={Object {}}
              />,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": 1,
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                    "marginHorizontal": "10%",
                    "textAlign": "center",
                  }
                }
              >
                Agenda Cultural da Universidade do Porto
              </Text>,
              "style": Object {
                "flex": 1,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Agenda Cultural da Universidade do Porto",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Roboto",
                  "fontSize": 25,
                  "marginHorizontal": "10%",
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "Agenda Cultural da Universidade do Porto",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Button
                onPress={[Function]}
                title="Entrar com a conta Google"
              />,
              "style": Object {
                "flex": 1,
                "width": "60%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onPress": [Function],
                "title": "Entrar com a conta Google",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "style": Object {
                "flex": 2,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            hidden={true}
            showHideTransition="fade"
          />,
          <Component
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
                }
              }
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "opacity": 0.7,
                  "width": "100%",
                }
              }
            />
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "height": "99%",
              }
            }
          >
            <Component
              style={
                Object {
                  "flex": 3,
                }
              }
            />
            <Component
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={1}
                style={Object {}}
              />
            </Component>
            <Component
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                    "marginHorizontal": "10%",
                    "textAlign": "center",
                  }
                }
              >
                Agenda Cultural da Universidade do Porto
              </Text>
            </Component>
            <Component
              style={
                Object {
                  "flex": 1,
                  "width": "60%",
                }
              }
            >
              <Button
                onPress={[Function]}
                title="Entrar com a conta Google"
              />
            </Component>
            <Component
              style={
                Object {
                  "flex": 2,
                }
              }
            />
          </Component>,
        ],
        "style": Object {
          "backgroundColor": "#2c8f7f",
          "height": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "hidden": true,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              source={
                Object {
                  "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
                }
              }
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "opacity": 0.7,
                  "width": "100%",
                }
              }
            />,
            "style": Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "uri": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Edif%C3%ADcio_da_Reitoria_da_Universidade_do_Porto.jpg",
              },
              "style": Object {
                "flex": 1,
                "height": "100%",
                "opacity": 0.7,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "flex": 3,
                  }
                }
              />,
              <Component
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Image
                  source={1}
                  style={Object {}}
                />
              </Component>,
              <Component
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "Roboto",
                      "fontSize": 25,
                      "marginHorizontal": "10%",
                      "textAlign": "center",
                    }
                  }
                >
                  Agenda Cultural da Universidade do Porto
                </Text>
              </Component>,
              <Component
                style={
                  Object {
                    "flex": 1,
                    "width": "60%",
                  }
                }
              >
                <Button
                  onPress={[Function]}
                  title="Entrar com a conta Google"
                />
              </Component>,
              <Component
                style={
                  Object {
                    "flex": 2,
                  }
                }
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "column",
              "height": "99%",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Object {
                  "flex": 3,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  source={1}
                  style={Object {}}
                />,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": 1,
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "white",
                      "fontFamily": "Roboto",
                      "fontSize": 25,
                      "marginHorizontal": "10%",
                      "textAlign": "center",
                    }
                  }
                >
                  Agenda Cultural da Universidade do Porto
                </Text>,
                "style": Object {
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "Agenda Cultural da Universidade do Porto",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "color": "white",
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                    "marginHorizontal": "10%",
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "Agenda Cultural da Universidade do Porto",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Button
                  onPress={[Function]}
                  title="Entrar com a conta Google"
                />,
                "style": Object {
                  "flex": 1,
                  "width": "60%",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "onPress": [Function],
                  "title": "Entrar com a conta Google",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "flex": 2,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App snapshot renders loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogInScreen />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <AppLoading />,
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <AppLoading />,
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
